[package]
name = "multi_dim_point"
version = "0.2.0"
authors = ["Roey Fuchs <fuchsroey@gmail.com>"]
edition = "2018"
description = "A simple multi-dimensional point"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RoeyFuchs/multi_dim_point"
keywords = ["point", "geometry", "multidimensional"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
